adjust pollinate and root

--- a/grow.html
+++ b/grow.html
@@ -23,6 +23,49 @@
           </div>
         </div>
         <div class="content__row">
+          <div class="text__wrapper">
+            <div class="text__heading">
+              <h3>MANIFESTO FOR FUTURE OF PARTICIPATORY ART</h3>
+              <img
+                class="text__heading--background"
+                alt="background image of blurry woods"
+                src="./contributions/gabriela_saenger_silva/summer_dithered.png"/>
+            </div>
+            <div class="text__content">
+              <h4>A Manifesto for Gathering Garden</h4>
+              <p>The ground must be levelled before anything can grow</p>
+              <p>
+                Plant seeds conscientiously, think about what is possible with
+                the conditions you have
+              </p>
+              <p>
+                Always exchange; never take from the soil, without offering back
+              </p>
+              <p>Toil alongside, show your fragilities and ask for help</p>
+              <p>
+                Be patient, go slow, take your time &ndash; replant, reshape and
+                try again
+              </p>
+              <p>
+                Show radical tolerance &ndash; somethings will always grow wild
+              </p>
+              <p>
+                Question your green fingers &ndash; whose prints are being left
+                on the land?
+              </p>
+              <p>
+                Take time to be proud and loud about the fruits of your labour
+                and the nurturing value of the work you do
+              </p>
+              <p>Leave space for your own struggles, watering and growth</p>
+
+              <div class="text__content--signature">
+                <i>Lucy Jefferies</i>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="content__row">
           <div class="content__column">
             <div class="text__wrapper">
               <div class="text__content">
@@ -40,34 +83,21 @@
             <img
             draggable="false"
             alt=""
-            src="./contributions/dither_it_djuna_mount.png"
-/>
+            src="./contributions/dither_it_djuna_mount.png"/>
           </div>
-          <div
-          draggable="true"
-          class="draggable__text--heading draggable"
-          data-item="1"
-        >
+          <div draggable="true" class="draggable__text--heading draggable" data-item="1">
             <h3>MY MANIFESTO</h3>
           </div>
-          <div
-          draggable="true"
-          class="draggable__textarea draggable"
-          data-item="2"
-        >
+          <div draggable="true" class="draggable__textarea draggable" data-item="2">
             <textarea id="story" name="story" rows="5" cols="33"></textarea>
           </div>
-          <div
-          draggable="true"
-          class="draggable__text--heading draggable"
-          data-item="3"
-        >
+          <div draggable="true" class="draggable__text--heading draggable" data-item="3">
             <h3>FLOURISH AND GROW TOGETHER</h3>
           </div>
         </div>
         <div class="draggable__space"></div>
       </div>
     </main>
-    <script src="drag-and-drop.js"></script>
   </body>
+  <script src="drag-and-drop.js"></script>
 </html>
