--- a/pollinate.html
+++ b/pollinate.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <title>gathering garden - pollinate</title>
-    <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="./nav.css" />
+    <link rel="stylesheet" href="./style.css"/>
+    <link rel="stylesheet" href="./nav.css"/>
   </head>
   <body>
     <header>
-      <h1><a href="./index.html">Gathering Garden</a></h1>
+      <h1>
+        <a href="./index.html">Gathering Garden</a>
+      </h1>
     </header>
     <main>
       <div class="content__wrapper">
@@ -18,69 +20,36 @@
         <div class="content__row">
           <div class="content__column">
             <div class="audio__wrapper">
-              <audio controls>
-                <source
-                  src="./contributions/gathering_garden_lucy_wheeler.mp3"
-                  type="audio/mpeg"
-                />
-                Your browser does not support the audio element.
-              </audio>
-            </div>
-            <div class="image__wrapper">
-              <img
-                alt="a poster for the Apollo Project with the text be sound, be creative, be yourself and photos of young people collaborating in an office and a gallery"
-                src="./contributions/apollo_project_dither.png"
-              />
-            </div>
-          </div>
-          <div class="text__wrapper">
-            <div class="text__heading">
-              <h3>MANIFESTO FOR FUTURE OF PARTICIPATORY ART</h3>
-              <img
-                class="text__heading--background"
-                alt="background image of blurry woods"
-                src="./contributions/gabriela_saenger_silva/summer_dithered.png"
-              />
-            </div>
-            <div class="text__content">
-              <h4>A Manifesto for Gathering Garden</h4>
-              <p>The ground must be levelled before anything can grow</p>
-              <p>
-                Plant seeds conscientiously, think about what is possible with
-                the conditions you have
-              </p>
-              <p>
-                Always exchange; never take from the soil, without offering back
-              </p>
-              <p>Toil alongside, show your fragilities and ask for help</p>
-              <p>
-                Be patient, go slow, take your time U+2013 replant, reshape and
-                try again
-              </p>
-              <p>
-                Show radical tolerance U+2013 somethings will always grow wild
-              </p>
-              <p>
-                Question your green fingers U+2013 whose prints are being left
-                on the land?
-              </p>
-              <p>
-                Take time to be proud and loud about the fruits of your labour
-                and the nurturing value of the work you do
-              </p>
-              <p>Leave space for your own struggles, watering and growth</p>
-
-              <div class="text__content--signature">
-                <i>Lucy Jefferies</i>
+              <div class="audio__controls">
+                <audio controls>
+                  <source
+                  src="./contributions/voice_note.mp3"
+                  type="audio/mpeg"/>
+                Your browser does not support the audio element.<a href="contributions/voice_note.mp3">download here</a>
+                </audio>
+              </div>
+              <div class="audio__caption">
+                <p>" As gardeners of participatory art I believe we need to work with heightened awareness of the places, people, contexts and environments that we find ourselves in. We need to understand how we are all interconnected to each other and we all form part of an ecology where we are all inter-dependent and as equally responsible for what happens in that garden. " - <i>lucy wheeler</i>
+                </p>
               </div>
             </div>
           </div>
         </div>
+        <div class="content__row">
+          <div class="image__wrapper">
+            <img
+                alt="a poster for the Apollo Project with the text be sound, be creative, be yourself and photos of young people collaborating in an office and a gallery"
+                src="./contributions/apollo_project_dither.png"/>
+          </div>
+        </div>
+
       </div>
       <ul class="nodes">
         <li class="node__wrapper">
           <a class="sphere__link" href="./root.html">
-            <div class="node__title"><p>[root]</p></div>
+            <div class="node__title">
+              <p>[root]</p>
+            </div>
             <div class="sphere__wrapper">
               <div class="sphere__gradient"></div>
             </div>
@@ -89,7 +58,9 @@
         </li>
         <li class="node__wrapper">
           <a class="sphere__link" href="./flower-bed.html">
-            <div class="node__title"><p>[seed]</p></div>
+            <div class="node__title">
+              <p>[seed]</p>
+            </div>
             <div id="sphere-2" class="sphere__wrapper">
               <div class="sphere__gradient"></div>
             </div>
@@ -98,7 +69,9 @@
         </li>
         <li class="node__wrapper">
           <a class="sphere__link" href="./pollinate.html">
-            <div class="node__title"><p>[pollinate]</p></div>
+            <div class="node__title">
+              <p>[pollinate]</p>
+            </div>
             <div id="sphere-3" class="sphere__wrapper">
               <div id="sphere-3" class="sphere__gradient"></div>
             </div>
@@ -107,7 +80,9 @@
         </li>
         <li class="node__wrapper">
           <a class="sphere__link" href="./grow.html">
-            <div class="node__title"><p>[grow]</p></div>
+            <div class="node__title">
+              <p>[grow]</p>
+            </div>
             <div id="sphere-4" class="sphere__wrapper">
               <div id="sphere-4" class="sphere__gradient"></div>
             </div>
@@ -116,7 +91,9 @@
         </li>
         <li class="node__wrapper">
           <a class="sphere__link" href="./about.html">
-            <div class="node__title"><p>[about]</p></div>
+            <div class="node__title">
+              <p>[about]</p>
+            </div>
             <div id="sphere-5" class="sphere__wrapper">
               <div id="sphere-5" class="sphere__gradient"></div>
             </div>
