--- a/root.html
+++ b/root.html
@@ -69,17 +69,17 @@
         </div>
         <div class="content__row">
           <div class="content__column">
-            <div class="audio__wrapper">
+                        <div class="audio__wrapper">
               <div class="audio__controls">
                 <audio controls>
                   <source
-                  src="./contributions/voice_note.mp3"
+                  src="./contributions/gathering_garden_lucy_wheeler.mp3"
                   type="audio/mpeg"/>
-                Your browser does not support the audio element.<a href="contributions/voice_note.mp3">download here</a>
-                </audio>
+                Your browser does not support the audio element.
+              </audio>
               </div>
               <div class="audio__caption">
-                <p>" As gardeners of participatory art I believe we need to work with heightened awareness of the places, people, contexts and environments that we find ourselves in. We need to understand how we are all interconnected to each other and we all form part of an ecology where we are all inter-dependent and as equally responsible for what happens in that garden. "</p>
+                <p>"In the gathering garden, community is a sound bedrock - where we grow tall and brave together. Doggedly facing and overcoming challenges through creative thinking. We question, we nurture, we tend to, we listen - carefully - together. "</p>
               </div>
             </div>
           </div>
