more mobile styling

--- a/flower-bed.html
+++ b/flower-bed.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>gathering garden - flower bed</title>
+    <title>gathering garden - seed</title>
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./flowers.css" />
     <link rel="stylesheet" href="./nav.css" />
@@ -14,21 +14,23 @@
       <h1><a href="./index.html">Gathering Garden</a></h1>
     </header>
     <main>
+      <div class="content__column">
       <h2>SEED</h2>
+      </div>
       <div id="bed"></div>
       <div class="form__wrapper">
         <div id="log" class="form__log"></div>
         <form id="flower-form" action="" method="get">
           <div class="form__input">
-            <label for="text">Enter your flower text: </label>
+            <label for="text">Plant some words in the gathering garden, enter your thoughts: </label>
             <textarea type="text" name="text" id="text" required></textarea>
           </div>
           <div class="form__input">
             <label for="email">Enter your name: </label>
             <input type="author" name="author" id="author" required />
           </div>
-          <div>
-            <input type="submit" value="Plant your flower" />
+          <div class="form__input">
+            <input type="submit" value="Plant your seed" />
           </div>
         </form>
       </div>
