--- a/pollinate.html
+++ b/pollinate.html
@@ -16,20 +16,20 @@
     </header>
     <main>
       <div class="content__wrapper">
-        <h2>POLLINATE</h2>
+        <div class="content__row">
+          <h2>POLLINATE</h2>
+        </div>
         <div class="content__row">
           <div class="content__column">
             <div class="audio__wrapper">
               <div class="audio__controls">
                 <audio controls>
-                  <source
-                  src="./contributions/voice_note.mp3"
-                  type="audio/mpeg"/>
-                Your browser does not support the audio element.<a href="contributions/voice_note.mp3">download here</a>
+                  <source src="./contributions/voice_note.mp3" type="audio/mpeg"/>
+                  Your browser does not support the audio element.<a href="contributions/voice_note.mp3">download here</a>
                 </audio>
               </div>
               <div class="audio__caption">
-                <p>" As gardeners of participatory art I believe we need to work with heightened awareness of the places, people, contexts and environments that we find ourselves in. We need to understand how we are all interconnected to each other and we all form part of an ecology where we are all inter-dependent and as equally responsible for what happens in that garden. " - <i>lucy wheeler</i>
+                <p>"As gardeners of participatory art I believe we need to work with heightened awareness of the places, people, contexts and environments that we find ourselves in. We need to understand how we are all interconnected to each other and we all form part of an ecology where we are all inter-dependent and as equally responsible for what happens in that garden. " - <i>lucy wheeler</i>
                 </p>
               </div>
             </div>
@@ -42,7 +42,47 @@
                 src="./contributions/apollo_project_dither.png"/>
           </div>
         </div>
-
+        <div class="content__row">
+          <div class="content__column">
+            <figure class="image__wrapper">
+              <img
+                alt="a paper with pencil sketches of a plan for garden beds"
+                src="contributions/gabriela_saenger_silva/planning-dithered.webp"/>
+              <figcaption class="image__credit">
+                <p>gabriela saenger silva</p>
+              </figcaption>
+            </figure>
+          </div>
+          <div class="text__wrapper">
+            <div class="text__content">
+              <p>You need people to dream together, and you need people to plan together and you need people to harvest with you.</p>
+              <div class="text__content--signature">
+                <p>Gabriela Saenger Silva</p>
+                <p>Experience from the Kitchen Garden 2020-2023</p>
+              </div>
+            </div>
+          </div>
+          <div class="content__column">
+            <figure class="image__wrapper">
+              <img
+                alt="greenhouses and garden beds in the summer time"
+                src="contributions/gabriela_saenger_silva/summer_dithered.png"/>
+              <figcaption class="image__credit">
+                <p>gabriela saenger silva</p>
+              </figcaption>
+            </figure>
+          </div>
+          <div class="content__column">
+            <figure class="image__wrapper">
+              <img
+                alt="a green bucket with green beans in it"
+                src="contributions/gabriela_saenger_silva/harvest-dithered.webp"/>
+              <figcaption class="image__credit">
+                <p>gabriela saenger silva</p>
+              </figcaption>
+            </figure>
+          </div>
+        </div>
       </div>
       <ul class="nodes">
         <li class="node__wrapper">
