--- a/flower-bed.html
+++ b/flower-bed.html
@@ -23,11 +23,11 @@
         <form id="flower-form" action="" method="get">
           <div class="form__input">
             <label for="text">Plant some words in the gathering garden, enter your thoughts: </label>
-            <textarea type="text" name="text" id="text" required></textarea>
+            <textarea type="text" name="text" id="text" maxlength="200" required></textarea>
           </div>
           <div class="form__input">
             <label for="email">Enter your name: </label>
-            <input type="author" name="author" id="author" required />
+            <input type="author" name="author" id="author" maxlength="100" required />
           </div>
           <div class="form__input">
             <input type="submit" value="Plant your seed" />
