--- a/grow.html
+++ b/grow.html
@@ -97,6 +97,63 @@
         </div>
         <div class="draggable__space"></div>
       </div>
+      <ul class="nodes">
+        <li class="node__wrapper">
+          <a class="sphere__link" href="./root.html">
+            <div class="node__title">
+              <p>[root]</p>
+            </div>
+            <div class="sphere__wrapper">
+              <div class="sphere__gradient"></div>
+            </div>
+            <div class="node__wave"></div>
+          </a>
+        </li>
+        <li class="node__wrapper">
+          <a class="sphere__link" href="./flower-bed.html">
+            <div class="node__title">
+              <p>[seed]</p>
+            </div>
+            <div id="sphere-2" class="sphere__wrapper">
+              <div class="sphere__gradient"></div>
+            </div>
+            <div class="node__wave"></div>
+          </a>
+        </li>
+        <li class="node__wrapper">
+          <a class="sphere__link" href="./pollinate.html">
+            <div class="node__title">
+              <p>[pollinate]</p>
+            </div>
+            <div id="sphere-3" class="sphere__wrapper">
+              <div id="sphere-3" class="sphere__gradient"></div>
+            </div>
+            <div class="node__wave"></div>
+          </a>
+        </li>
+        <li class="node__wrapper">
+          <a class="sphere__link" href="./grow.html">
+            <div class="node__title">
+              <p>[grow]</p>
+            </div>
+            <div id="sphere-4" class="sphere__wrapper">
+              <div id="sphere-4" class="sphere__gradient"></div>
+            </div>
+            <div class="node__wave"></div>
+          </a>
+        </li>
+        <li class="node__wrapper">
+          <a class="sphere__link" href="./about.html">
+            <div class="node__title">
+              <p>[about]</p>
+            </div>
+            <div id="sphere-5" class="sphere__wrapper">
+              <div id="sphere-5" class="sphere__gradient"></div>
+            </div>
+            <div class="node__wave"></div>
+          </a>
+        </li>
+      </ul>
     </main>
   </body>
   <script src="drag-and-drop.js"></script>
