add final audio piece

--- a/pollinate.html
+++ b/pollinate.html
@@ -36,13 +36,6 @@
           </div>
         </div>
         <div class="content__row">
-          <div class="image__wrapper">
-            <img
-                alt="a poster for the Apollo Project with the text be sound, be creative, be yourself and photos of young people collaborating in an office and a gallery"
-                src="./contributions/apollo_project_dither.png"/>
-          </div>
-        </div>
-        <div class="content__row">
           <div class="content__column">
             <figure class="image__wrapper">
               <img
@@ -81,6 +74,24 @@
                 <p>gabriela saenger silva</p>
               </figcaption>
             </figure>
+          </div>
+        </div>
+        <div class="content__row">
+          <div class="content__column">
+            <div class="audio__wrapper">
+              <div class="audio__controls">
+                <audio controls>
+                  <source
+                  src="./contributions/gathering_garden_rachel_moss.mp3"
+                  type="audio/mpeg"/>
+                Your browser does not support the audio element.
+              </audio>
+              </div>
+              <div class="audio__caption">
+                <p>"The term companion planting is all about nature needing nurture. Like people, not all plants are happy living beside each other. Carefully places, however, one plant can help another by putting suitable nutrients in the soil. This is how I see my role in the arts - as an established tree, I can provide shade, protection from the wind and shelter for others. I can help them to attract the beneficial insects (or, industry contacts). I am here to support early career individuals, helping them to grow and to flourish on their own terms. " - <i>rachel moss</i>
+                </p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
