--- a/root.html
+++ b/root.html
@@ -69,7 +69,7 @@
         </div>
         <div class="content__row">
           <div class="content__column">
-                        <div class="audio__wrapper">
+            <div class="audio__wrapper">
               <div class="audio__controls">
                 <audio controls>
                   <source
@@ -94,6 +94,13 @@
                 <p>lottie rimmer</p>
               </figcaption>
             </figure>
+          </div>
+        </div>
+        <div class="content__row">
+          <div class="image__wrapper">
+            <img
+                alt="a poster for the Apollo Project with the text be sound, be creative, be yourself and photos of young people collaborating in an office and a gallery"
+                src="./contributions/apollo_project_dither.png"/>
           </div>
         </div>
       </div>
