--- a/grow.html
+++ b/grow.html
@@ -17,9 +17,20 @@
     </header>
     <main>
       <div class="content__wrapper">
-        <div class="content__row">
+        <div class="content__row" style="
+    border-top-left-radius: 50%;
+    border-top-right-radius: 50%;
+">
           <div class="content__column">
-            <h2>GROW</h2>
+            <h2 style="
+    border-radius: 50%;
+    height: 2em;
+    height: 4em;
+    display: flex;
+    align-items: center;
+    width: 4em;
+    justify-content: center;
+">GROW</h2>
           </div>
         </div>
         <div class="content__row">
