some fixes that hopefully improve accesibility?

--- a/grow.html
+++ b/grow.html
@@ -34,7 +34,7 @@
           </div>
         </div>
         <div class="content__row">
-          <div class="text__wrapper">
+          <article class="text__wrapper">
             <div class="text__heading">
               <h3>MANIFESTO FOR FUTURE OF PARTICIPATORY ART</h3>
               <img
@@ -74,7 +74,7 @@
                 <i>Lucy Jefferies</i>
               </div>
             </div>
-          </div>
+          </article>
         </div>
         <div class="content__row">
           <div class="content__column">
@@ -108,6 +108,8 @@
         </div>
         <div class="draggable__space"></div>
       </div>
+    </main>
+    <nav role="navigation" aria-label="Main">
       <ul class="nodes">
         <li class="node__wrapper">
           <a class="sphere__link" href="./root.html">
@@ -165,7 +167,7 @@
           </a>
         </li>
       </ul>
-    </main>
+    </nav>
   </body>
   <script src="drag-and-drop.js"></script>
 </html>
