--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <title>Gathering Garden</title>
-    <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="./nav.css" />
+    <link rel="stylesheet" href="./style.css"/>
+    <link rel="stylesheet" href="./nav.css"/>
   </head>
   <body>
-    <header>
+    <header role="banner">
       <h1>Gathering Garden</h1>
     </header>
-    <main>
+    <nav role="navigation" aria-label="Main">
       <ul class="nodes">
         <li class="node__wrapper">
           <a class="sphere__link" href="./root.html">
-            <div class="node__title"><p>[root]</p></div>
+            <div class="node__title">
+              <p>[root]</p>
+            </div>
             <div class="sphere__wrapper">
               <div class="sphere__gradient"></div>
             </div>
@@ -25,7 +27,9 @@
         </li>
         <li class="node__wrapper">
           <a class="sphere__link" href="./flower-bed.html">
-            <div class="node__title"><p>[seed]</p></div>
+            <div class="node__title">
+              <p>[seed]</p>
+            </div>
             <div id="sphere-2" class="sphere__wrapper">
               <div class="sphere__gradient"></div>
             </div>
@@ -34,7 +38,9 @@
         </li>
         <li class="node__wrapper">
           <a class="sphere__link" href="./pollinate.html">
-            <div class="node__title"><p>[pollinate]</p></div>
+            <div class="node__title">
+              <p>[pollinate]</p>
+            </div>
             <div id="sphere-3" class="sphere__wrapper">
               <div id="sphere-3" class="sphere__gradient"></div>
             </div>
@@ -43,7 +49,9 @@
         </li>
         <li class="node__wrapper">
           <a class="sphere__link" href="./grow.html">
-            <div class="node__title"><p>[grow]</p></div>
+            <div class="node__title">
+              <p>[grow]</p>
+            </div>
             <div id="sphere-4" class="sphere__wrapper">
               <div id="sphere-4" class="sphere__gradient"></div>
             </div>
@@ -52,7 +60,9 @@
         </li>
         <li class="node__wrapper">
           <a class="sphere__link" href="./about.html">
-            <div class="node__title"><p>[about]</p></div>
+            <div class="node__title">
+              <p>[about]</p>
+            </div>
             <div id="sphere-5" class="sphere__wrapper">
               <div id="sphere-5" class="sphere__gradient"></div>
             </div>
@@ -60,6 +70,6 @@
           </a>
         </li>
       </ul>
-    </main>
+    </nav>
   </body>
 </html>
