--- a/pollinate.html
+++ b/pollinate.html
@@ -95,6 +95,8 @@
           </div>
         </div>
       </div>
+    </main>
+    <nav role="navigation" aria-label="Main">
       <ul class="nodes">
         <li class="node__wrapper">
           <a class="sphere__link" href="./root.html">
@@ -152,6 +154,6 @@
           </a>
         </li>
       </ul>
-    </main>
+    </nav>
   </body>
 </html>
