--- a/root.html
+++ b/root.html
@@ -23,7 +23,7 @@
             </div>
           </div>
           <div class="content__column">
-            <div class="text__wrapper">
+            <article class="text__wrapper">
               <div class="text__heading">
                 <h3>MANIFESTO FOR FUTURE OF PARTICIPATORY ART</h3>
                 <img
@@ -64,7 +64,7 @@
                   <i>Ardis, Julie, Liz and Lucy</i>
                 </div>
               </div>
-            </div>
+            </article>
           </div>
         </div>
         <div class="content__row">
@@ -104,6 +104,8 @@
           </div>
         </div>
       </div>
+    </main>
+    <nav role="navigation" aria-label="Main">
       <ul class="nodes">
         <li class="node__wrapper">
           <a class="sphere__link" href="./root.html">
@@ -161,6 +163,6 @@
           </a>
         </li>
       </ul>
-    </main>
+    </nav>
   </body>
 </html>
