--- a/about.html
+++ b/about.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <title>gathering garden - about</title>
-    <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="./nav.css" />
+    <link rel="stylesheet" href="./style.css"/>
+    <link rel="stylesheet" href="./nav.css"/>
   </head>
   <body>
     <header>
-      <h1><a href="./index.html">Gathering Garden</a></h1>
+      <h1>
+        <a href="./index.html">Gathering Garden</a>
+      </h1>
     </header>
     <main>
       <div class="content__wrapper">
@@ -52,10 +54,14 @@
           </div>
         </div>
       </div>
+    </main>
+    <nav role="navigation" aria-label="Main">
       <ul class="nodes">
         <li class="node__wrapper">
           <a class="sphere__link" href="./root.html">
-            <div class="node__title"><p>[root]</p></div>
+            <div class="node__title">
+              <p>[root]</p>
+            </div>
             <div class="sphere__wrapper">
               <div class="sphere__gradient"></div>
             </div>
@@ -64,7 +70,9 @@
         </li>
         <li class="node__wrapper">
           <a class="sphere__link" href="./flower-bed.html">
-            <div class="node__title"><p>[seed]</p></div>
+            <div class="node__title">
+              <p>[seed]</p>
+            </div>
             <div id="sphere-2" class="sphere__wrapper">
               <div class="sphere__gradient"></div>
             </div>
@@ -73,7 +81,9 @@
         </li>
         <li class="node__wrapper">
           <a class="sphere__link" href="./pollinate.html">
-            <div class="node__title"><p>[pollinate]</p></div>
+            <div class="node__title">
+              <p>[pollinate]</p>
+            </div>
             <div id="sphere-3" class="sphere__wrapper">
               <div id="sphere-3" class="sphere__gradient"></div>
             </div>
@@ -82,7 +92,9 @@
         </li>
         <li class="node__wrapper">
           <a class="sphere__link" href="./grow.html">
-            <div class="node__title"><p>[grow]</p></div>
+            <div class="node__title">
+              <p>[grow]</p>
+            </div>
             <div id="sphere-4" class="sphere__wrapper">
               <div id="sphere-4" class="sphere__gradient"></div>
             </div>
@@ -91,7 +103,9 @@
         </li>
         <li class="node__wrapper">
           <a class="sphere__link" href="./about.html">
-            <div class="node__title"><p>[about]</p></div>
+            <div class="node__title">
+              <p>[about]</p>
+            </div>
             <div id="sphere-5" class="sphere__wrapper">
               <div id="sphere-5" class="sphere__gradient"></div>
             </div>
@@ -99,6 +113,6 @@
           </a>
         </li>
       </ul>
-    </main>
+    </nav>
   </body>
 </html>
