--- a/flower-bed.html
+++ b/flower-bed.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <title>gathering garden - seed</title>
-    <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="./flowers.css" />
-    <link rel="stylesheet" href="./nav.css" />
+    <link rel="stylesheet" href="./style.css"/>
+    <link rel="stylesheet" href="./flowers.css"/>
+    <link rel="stylesheet" href="./nav.css"/>
   </head>
   <body>
     <header>
-      <h1><a href="./index.html">Gathering Garden</a></h1>
+      <h1>
+        <a href="./index.html">Gathering Garden</a>
+      </h1>
     </header>
     <main>
       <div class="content__column">
-      <h2>SEED</h2>
+        <h2>SEED</h2>
       </div>
       <div id="bed"></div>
       <div class="form__wrapper">
@@ -27,17 +29,21 @@
           </div>
           <div class="form__input">
             <label for="email">Enter your name: </label>
-            <input type="author" name="author" id="author" maxlength="100" required />
+            <input type="author" name="author" id="author" maxlength="100" required/>
           </div>
           <div class="form__input">
-            <input type="submit" value="Plant your seed" />
+            <input type="submit" value="Plant your seed"/>
           </div>
         </form>
       </div>
+    </main>
+    <nav role="navigation" aria-label="Main">
       <ul class="nodes">
         <li class="node__wrapper">
           <a class="sphere__link" href="./root.html">
-            <div class="node__title"><p>[root]</p></div>
+            <div class="node__title">
+              <p>[root]</p>
+            </div>
             <div class="sphere__wrapper">
               <div class="sphere__gradient"></div>
             </div>
@@ -46,7 +52,9 @@
         </li>
         <li class="node__wrapper">
           <a class="sphere__link" href="./flower-bed.html">
-            <div class="node__title"><p>[seed]</p></div>
+            <div class="node__title">
+              <p>[seed]</p>
+            </div>
             <div id="sphere-2" class="sphere__wrapper">
               <div class="sphere__gradient"></div>
             </div>
@@ -55,7 +63,9 @@
         </li>
         <li class="node__wrapper">
           <a class="sphere__link" href="./pollinate.html">
-            <div class="node__title"><p>[pollinate]</p></div>
+            <div class="node__title">
+              <p>[pollinate]</p>
+            </div>
             <div id="sphere-3" class="sphere__wrapper">
               <div id="sphere-3" class="sphere__gradient"></div>
             </div>
@@ -64,7 +74,9 @@
         </li>
         <li class="node__wrapper">
           <a class="sphere__link" href="./grow.html">
-            <div class="node__title"><p>[grow]</p></div>
+            <div class="node__title">
+              <p>[grow]</p>
+            </div>
             <div id="sphere-4" class="sphere__wrapper">
               <div id="sphere-4" class="sphere__gradient"></div>
             </div>
@@ -73,7 +85,9 @@
         </li>
         <li class="node__wrapper">
           <a class="sphere__link" href="./about.html">
-            <div class="node__title"><p>[about]</p></div>
+            <div class="node__title">
+              <p>[about]</p>
+            </div>
             <div id="sphere-5" class="sphere__wrapper">
               <div id="sphere-5" class="sphere__gradient"></div>
             </div>
@@ -81,12 +95,12 @@
           </a>
         </li>
       </ul>
-    </main>
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
-    <script src="firebase.js"></script>
-    <script src="flower-data.js"></script>
-    <script src="flower-populate.js"></script>
-    <script src="flower-form.js"></script>
+    </nav>
   </body>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+  <script src="firebase.js"></script>
+  <script src="flower-data.js"></script>
+  <script src="flower-populate.js"></script>
+  <script src="flower-form.js"></script>
 </html>
