--- a/flower-bed.html
+++ b/flower-bed.html
@@ -36,6 +36,15 @@
           </div>
         </form>
       </div>
+      <div class="content__row">
+        <div class="content__column">
+          <figure class="image__wrapper">
+            <img
+                alt="cut out newspaper letters that spell out 'create space for weeds of possibility to grow' with branches framing the letters"
+                src="contributions/weeds_dithered.png"/>
+          </figure>
+        </div>
+      </div>
     </main>
     <nav role="navigation" aria-label="Main">
       <ul class="nodes">
