--- a/about.html
+++ b/about.html
@@ -20,36 +20,18 @@
         <div class="content__row">
           <div class="text__wrapper">
             <div class="text__content">
+              <h4>Can you imagine the future of participatory art? </h4>
+              <p>Gathering Momentum explored this question during a two-day online programme of talks and workshops on 16 and 17 March 2023, with colleagues collectively and creatively considering the next decade of visual arts engagement.</p>
+              <p>Commissioned by Engage and programmed by six Young Producers from across the UK, Gathering Momentum provided a space to wonder, dream, and hope. As we emerged from the pandemic and into a distinct set of contemporary issues – the cost of living crisis, the climate emergency, divisive politics – Gathering Momentum explored how art can help bring people together to create shared visions and imagine new possibilities and futures.</p>
+              <p>Through panel discussions, presentations, workshops and social time to share practice, we considered:</p>
+              <ul>
+                <li>• What role young people can play in the future of participatory arts, and what impact the next generation of art-workers can have on the sector</li>
+                <li>• What role collective action, self-organisation and activism can play in participatory arts to address challenges of equality, social justice and climate change</li>
+                <li>• How participatory arts can amplify voices that are often marginalised and support people-powered community development to re-use and reclaim spaces.</li>
+              </ul>
+              <p>The Gathering Garden was commissioned as an artistic response to Gathering Momentum, and now exists as virtual space in which the seeds of learning from the online events can continue to grow and germinate. To find out more about Gathering Momentum visit: <a href="https://engage.org/happenings/gathering-momentum/">https://engage.org/happenings/gathering-momentum/</a> </p>
               <h4>About the making of this site</h4>
               <p>This will be some information about how this site was built</p>
-              <p>
-                Plant seeds conscientiously, think about what is possible with
-                the conditions you have
-              </p>
-              <p>
-                Always exchange; never take from the soil, without offering back
-              </p>
-              <p>Toil alongside, show your fragilities and ask for help</p>
-              <p>
-                Be patient, go slow, take your time U+2013 replant, reshape and
-                try again
-              </p>
-              <p>
-                Show radical tolerance U+2013 somethings will always grow wild
-              </p>
-              <p>
-                Question your green fingers U+2013 whose prints are being left
-                on the land?
-              </p>
-              <p>
-                Take time to be proud and loud about the fruits of your labour
-                and the nurturing value of the work you do
-              </p>
-              <p>Leave space for your own struggles, watering and growth</p>
-
-              <div class="text__content--signature">
-                <i>Lucy Jefferies</i>
-              </div>
             </div>
           </div>
         </div>
