more mobile tweaks

--- a/grow.html
+++ b/grow.html
@@ -76,7 +76,16 @@
             </div>
           </article>
         </div>
-        <div class="content__row">
+        <div class="content__row drag__show">
+          <div class="content__column">
+            <div class="text__wrapper">
+              <div class="text__content">
+                <p>for a full experience of the site please visit on a desktop</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="content__row drag__hide">
           <div class="content__column">
             <div class="text__wrapper">
               <div class="text__content">
@@ -89,7 +98,7 @@
             </div>
           </div>
         </div>
-        <div class="draggable__wrapper">
+        <div class="draggable__wrapper drag__hide">
           <div draggable="true" class="draggable__image draggable" data-item="0">
             <img
             draggable="false"
@@ -106,7 +115,7 @@
             <h3>FLOURISH AND GROW TOGETHER</h3>
           </div>
         </div>
-        <div class="draggable__space"></div>
+        <div class="draggable__space drag__hide"></div>
       </div>
     </main>
     <nav role="navigation" aria-label="Main">
