--- a/about.html
+++ b/about.html
@@ -29,9 +29,22 @@
                 <li>• What role collective action, self-organisation and activism can play in participatory arts to address challenges of equality, social justice and climate change</li>
                 <li>• How participatory arts can amplify voices that are often marginalised and support people-powered community development to re-use and reclaim spaces.</li>
               </ul>
-              <p>The Gathering Garden was commissioned as an artistic response to Gathering Momentum, and now exists as virtual space in which the seeds of learning from the online events can continue to grow and germinate. To find out more about Gathering Momentum visit: <a href="https://engage.org/happenings/gathering-momentum/">https://engage.org/happenings/gathering-momentum/</a> </p>
+              <p>The Gathering Garden was commissioned as an artistic response to Gathering Momentum, and now exists as virtual space in which the seeds of learning from the online events can continue to grow and germinate. To find out more about Gathering Momentum visit: <a href="https://engage.org/happenings/gathering-momentum/">https://engage.org/happenings/gathering-momentum/</a>
+              </p>
               <h4>About the making of this site</h4>
               <p>This will be some information about how this site was built</p>
+            </div>
+          </div>
+        </div>
+        <div class="content__row">
+          <div class="quote__wrapper">
+            <div class="quote__text">
+              <aside>
+                <p>"We want to radically shift how work in the creative sector is done for everyone, but see young people as the best, most fearless, radical and creative way to that."</p>
+              </aisde>
+              <cite>
+                <p>Rising Arts Agency</p>
+              </cite>
             </div>
           </div>
         </div>
