--- a/flower-bed.html
+++ b/flower-bed.html
@@ -45,6 +45,18 @@
           </figure>
         </div>
       </div>
+      <div class="content__row">
+        <div class="quote__wrapper">
+          <div class="quote__text">
+            <aside>
+              <p>"We need to move forward from calling out or thinking about those questions, we need to be making space to design differently, or to make differently."</p>
+            </aisde>
+            <cite>
+              <p>Suzanne Dhawali</p>
+            </cite>
+          </div>
+        </div>
+      </div>
     </main>
     <nav role="navigation" aria-label="Main">
       <ul class="nodes">
