--- a/pollinate.html
+++ b/pollinate.html
@@ -94,6 +94,18 @@
             </div>
           </div>
         </div>
+        <div class="content__row">
+          <div class="quote__wrapper">
+            <div class="quote__text">
+              <aside>
+                <p>"Is the act of dreaming necessary to build movements around collective action? To empower people to be leaders in their communities? To empower people spiritually as well as materially? How can we use dreaming to encourage self organisation and participation?"</p>
+              </aisde>
+              <cite>
+                <p>Kandace Siobhan Walker</p>
+              </cite>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
     <nav role="navigation" aria-label="Main">
