--- a/root.html
+++ b/root.html
@@ -97,6 +97,18 @@
           </div>
         </div>
         <div class="content__row">
+          <div class="quote__wrapper">
+            <div class="quote__text">
+              <aside>
+                <p>"Everything that exists for better or worse was at one time just a barely expressed hope."</p>
+              </aisde>
+              <cite>
+                <p>Kandace Siobhan Walker</p>
+              </cite>
+            </div>
+          </div>
+        </div>
+        <div class="content__row">
           <div class="image__wrapper">
             <img
                 alt="a poster for the Apollo Project with the text be sound, be creative, be yourself and photos of young people collaborating in an office and a gallery"
