--- a/grow.html
+++ b/grow.html
@@ -34,6 +34,18 @@
           </div>
         </div>
         <div class="content__row">
+          <div class="quote__wrapper">
+            <div class="quote__text">
+              <aside>
+                <p>"How do we widen these movements, how do we widen out who can be part of this?"</p>
+              </aisde>
+              <cite>
+                <p>Suzanne Dhawali</p>
+              </cite>
+            </div>
+          </div>
+        </div>
+        <div class="content__row">
           <article class="text__wrapper">
             <div class="text__heading">
               <h3>MANIFESTO FOR FUTURE OF PARTICIPATORY ART</h3>
