add more to about

--- a/about.html
+++ b/about.html
@@ -20,31 +20,29 @@
         <div class="content__row">
           <div class="text__wrapper">
             <div class="text__content">
-              <h4>Can you imagine the future of participatory art? </h4>
+              <h4 id="about-1">Can you imagine the future of participatory art? </h4>
               <p>Gathering Momentum explored this question during a two-day online programme of talks and workshops on 16 and 17 March 2023, with colleagues collectively and creatively considering the next decade of visual arts engagement.</p>
               <p>Commissioned by Engage and programmed by six Young Producers from across the UK, Gathering Momentum provided a space to wonder, dream, and hope. As we emerged from the pandemic and into a distinct set of contemporary issues – the cost of living crisis, the climate emergency, divisive politics – Gathering Momentum explored how art can help bring people together to create shared visions and imagine new possibilities and futures.</p>
               <p>Through panel discussions, presentations, workshops and social time to share practice, we considered:</p>
               <ul>
-                <li>• What role young people can play in the future of participatory arts, and what impact the next generation of art-workers can have on the sector</li>
-                <li>• What role collective action, self-organisation and activism can play in participatory arts to address challenges of equality, social justice and climate change</li>
-                <li>• How participatory arts can amplify voices that are often marginalised and support people-powered community development to re-use and reclaim spaces.</li>
+                <li> What role young people can play in the future of participatory arts, and what impact the next generation of art-workers can have on the sector</li>
+                <li> What role collective action, self-organisation and activism can play in participatory arts to address challenges of equality, social justice and climate change</li>
+                <li> How participatory arts can amplify voices that are often marginalised and support people-powered community development to re-use and reclaim spaces.</li>
               </ul>
               <p>The Gathering Garden was commissioned as an artistic response to Gathering Momentum, and now exists as virtual space in which the seeds of learning from the online events can continue to grow and germinate. To find out more about Gathering Momentum visit: <a href="https://engage.org/happenings/gathering-momentum/">https://engage.org/happenings/gathering-momentum/</a>
               </p>
-              <h4>About the making of this site</h4>
-              <p>This will be some information about how this site was built</p>
             </div>
           </div>
         </div>
         <div class="content__row">
-          <div class="quote__wrapper">
-            <div class="quote__text">
-              <aside>
-                <p>"We want to radically shift how work in the creative sector is done for everyone, but see young people as the best, most fearless, radical and creative way to that."</p>
-              </aisde>
-              <cite>
-                <p>Rising Arts Agency</p>
-              </cite>
+          <div class="text__wrapper">
+            <div class="text__content">
+              <h4 id="about-2">The making of the site</h4>
+              <p>This site was made by artist <a href="https://www.harriethw.com">Harriet Horobin-Worley</a> who's practice revolves around the material reality of the web, knowledge sharing and collaborative work
+              </p>
+              <p>"I was inspired by the values of connection, community and sustainability with the design of this site.</p>
+              <p>I believe that the web can be a space for connection and communication, that it can provide tools for resilience and growth, but that we must engage with it critically. This site is made with 'low tech' and accessible design, much of it is hand-rolled HTML without the use of javascript frameworks or libraries, so that it uses less computer processing power and will be easier to archive and maintain.</p>
+              <p>I approached building it with the care an attention that one might approach a garden, planting the resources in beds where I thought they would thrive, and hoping that visitors will take from it and leave as much as they need as they walk through the sections."</p>
             </div>
           </div>
         </div>
