--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header role="banner">
-      <h1>Gathering Garden</h1>
+      <h1>GATHERING GARDEN</h1>
     </header>
     <nav role="navigation" aria-label="Main">
       <ul class="nodes">
