--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
   <body>
     <header>
       <h1>
-        <a href="./index.html">Gathering Garden</a>
+        <a href="./index.html">GATHERING GARDEN</a>
       </h1>
     </header>
     <main>
