--- a/grow.html
+++ b/grow.html
@@ -12,7 +12,7 @@
   <body>
     <header>
       <h1>
-        <a href="./index.html">Gathering Garden</a>
+        <a href="./index.html">GATHERING GARDEN</a>
       </h1>
     </header>
     <main>
