refine drag and drop
position elements relative to the white space... bad code :(

--- a/grow.html
+++ b/grow.html
@@ -126,8 +126,26 @@
           <div draggable="true" class="draggable__text--heading draggable" data-item="3">
             <h3>FLOURISH AND GROW TOGETHER</h3>
           </div>
+          <div draggable="true" class="draggable__image draggable" data-item="4">
+            <img
+            draggable="false"
+            alt=""
+            src="./contributions/gabriela_saenger_silva/summer_dithered.png"/>
+          </div>
+          <div draggable="true" class="draggable__image draggable" data-item="5">
+            <img
+            draggable="false"
+            alt=""
+            src="./assets/cyanotype_flowers.webp"/>
+          </div>
+          <div draggable="true" class="draggable__image draggable" data-item="6">
+            <img
+            draggable="false"
+            alt=""
+            src="./assets/cyanotype_horsehair.webp"/>
+          </div>
         </div>
-        <div class="draggable__space drag__hide"></div>
+        <div id="draggable-space" class="draggable__space drag__hide"></div>
       </div>
     </main>
     <nav role="navigation" aria-label="Main">
