correct audio attribution

--- a/pollinate.html
+++ b/pollinate.html
@@ -29,7 +29,7 @@
                 </audio>
               </div>
               <div class="audio__caption">
-                <p>"As gardeners of participatory art I believe we need to work with heightened awareness of the places, people, contexts and environments that we find ourselves in. We need to understand how we are all interconnected to each other and we all form part of an ecology where we are all inter-dependent and as equally responsible for what happens in that garden. " - <i>lucy wheeler</i>
+                <p>"As gardeners of participatory art I believe we need to work with heightened awareness of the places, people, contexts and environments that we find ourselves in. We need to understand how we are all interconnected to each other and we all form part of an ecology where we are all inter-dependent and as equally responsible for what happens in that garden. " - <i>anonymous</i>
                 </p>
               </div>
             </div>
