add wildflowers poem

--- a/root.html
+++ b/root.html
@@ -115,6 +115,39 @@
                 src="./contributions/apollo_project_dither.png"/>
           </div>
         </div>
+        <div class="content__row">
+          <article class="text__wrapper">
+            <div class="text__heading">
+              <h3>Wildflowers</h3>
+              <img
+              class="text__heading--background"
+              alt="background image of blurry woods"
+              src="./contributions/dither_it_djuna_mount.png"/>
+            </div>
+            <div class="text__content">
+                <p>
+                  Creativity is the seed of life</br>
+                  We are the hands that sow</br> 
+                  Through our stories and words</br>
+                  From various parts of our blue planet</br>
+                  I wish for fellow poets and creators</br>
+                  To plant more seeds of honesty</br>
+                  Because telling the truth is timeless </br>
+                  In order for us to grow,</br>
+                  We must exist as if we are wildflowers </br>
+                  Growing in the same soil </br>
+                  Using our imagination to turn our differences </br>
+                  into a rainbow </br>
+                  Through talking, writing, petitions, performance, and more</br>
+                  The hope that I harbor for participatory art is this:</br>
+                  That we can heal society and continue the creative legacy.</br>
+              </p>
+              <div class="text__content--signature">
+                <i>KG Munro</i>
+              </div>
+            </div>
+          </article>
+        </div>
       </div>
     </main>
     <nav role="navigation" aria-label="Main">
